--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,22 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  /* Scrollbar Track */
+  ::-webkit-scrollbar {
+    width: 5px;
+    display: none;
+  }
+
+  /* Scrollbar Thumb */
+  ::-webkit-scrollbar-thumb {
+    /* background-color: ; */
+    border-radius: 6px;
+  }
+
+  /* Scrollbar Thumb on Hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: grey;
+  }
+}
