--- a/src/index.css
+++ b/src/index.css
@@ -63,19 +63,26 @@
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
+  }
+
+  ul,
+  ol {
+    list-style: revert;
   }
 }
 
 @layer utilities {
+
   /* Scrollbar Track */
   ::-webkit-scrollbar {
     width: 5px;
     display: none;
-    
+
   }
-  
+
   /* Scrollbar Thumb */
   ::-webkit-scrollbar-thumb {
     background-color: red;
