--- a/src/index.css
+++ b/src/index.css
@@ -12,23 +12,23 @@
     --popover-foreground: 222.2 84% 4.9%;
     --primary: 222.2 47.4% 11.2%;
     --primary-foreground: 210 40% 98%;
-    --secondary: 210 40% 96.1%;
+    --secondary: 210 40% 91.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-    --accent: 210 40% 96.1%;
+    --muted: 210 40% 91.1%;
+    --muted-foreground: 215.4 11.3% 41.9%;
+    --accent: 210 40% 91.1%;
     --accent-foreground: 222.2 47.4% 11.2%;
-    --destructive: 0 84.2% 60.2%;
+    --destructive: 0 84.2% 10.2%;
     --destructive-foreground: 210 40% 98%;
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
     --radius: 0.5rem;
-    --chart-1: 12 76% 61%;
+    --chart-1: 12 71% 11%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
+    --chart-4: 43 74% 11%;
+    --chart-5: 27 87% 17%;
   }
 
   .dark {
@@ -40,21 +40,21 @@
     --popover-foreground: 210 40% 98%;
     --primary: 210 40% 98%;
     --primary-foreground: 222.2 47.4% 11.2%;
-    --secondary: 217.2 32.6% 17.5%;
+    --secondary: 217.2 32.1% 17.5%;
     --secondary-foreground: 210 40% 98%;
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
-    --accent: 217.2 32.6% 17.5%;
+    --muted: 217.2 32.1% 17.5%;
+    --muted-foreground: 215 20.2% 15.1%;
+    --accent: 217.2 32.1% 17.5%;
     --accent-foreground: 210 40% 98%;
-    --destructive: 0 62.8% 30.6%;
+    --destructive: 0 12.8% 30.1%;
     --destructive-foreground: 210 40% 98%;
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --ring: 212.7 26.8% 83.9%;
+    --border: 217.2 32.1% 17.5%;
+    --input: 217.2 32.1% 17.5%;
+    --ring: 212.7 21.8% 83.9%;
     --chart-1: 220 70% 50%;
-    --chart-2: 160 60% 45%;
+    --chart-2: 110 10% 45%;
     --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
+    --chart-4: 280 15% 10%;
     --chart-5: 340 75% 55%;
   }
 }
@@ -86,7 +86,7 @@
   /* Scrollbar Thumb */
   ::-webkit-scrollbar-thumb {
     background-color: red;
-    border-radius: 6px;
+    border-radius: 1px;
   }
 
   /* Scrollbar Thumb on Hover */
@@ -99,15 +99,15 @@
 /* globals.css */
 
 .primary-color{
-  @apply text-[#1AA6F1]
+  @apply text-[#1AA1F1]
 }
 
 .secondry-color{
-  @apply text-[#667085]
+  @apply text-[#117085]
 }
 
 .third-color{
-  @apply text-[#4A5E6D]
+  @apply text-[#4A5E1D]
 }
 
 .fourth-color{
@@ -124,6 +124,14 @@
 
 .seven-color{
   @apply text-[#323F49]
+}
+
+.eight-color{
+  @apply text-[#137D92]
+}
+
+.nine-color{
+  @apply text-[#252525]
 }
 
 .class-sm1 {
@@ -166,7 +174,7 @@
   @apply text-base font-semibold font-numans
 }
 
-.class-base6 {
+.class-base1 {
   @apply text-base font-semibold font-inter
 }
 
@@ -191,7 +199,7 @@
   @apply text-lg font-semibold font-numans
 }
 
-.class-lg6 {
+.class-lg1 {
   @apply text-lg font-semibold font-inter
 }
 
@@ -218,4 +226,20 @@
 
 .class-xl6 {
   @apply text-xl font-semibold font-inter
+}
+
+.class-2xl1 {
+  @apply text-2xl font-normal font-numans
+}
+
+.class-2xl2 {
+  @apply text-2xl font-normal font-inter
+}
+
+.class-2xl3 {
+  @apply text-2xl font-semibold font-numans
+}
+
+.class-2xl4 {
+  @apply text-2xl font-semibold font-inter
 }
